# quoin-api

./: .env.example  .env.test  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  ROADMAP.md  SECURITY.md  copier.yml  docker-compose.yml  justfile  prek.toml  pyproject.toml  zensical.toml  {{ _copier_conf.answers_file }}.jinja
.claude/: launch.json  settings.json
.claude/agents/: migration-reviewer.md  rbac-route-auditor.md
.claude/hooks/: block-sensitive.sh  config-drift.sh  http-exception-check.sh  migration-reminder.sh
.claude/skills/quoin-add-endpoint/: SKILL.md
.claude/skills/quoin-auth-route/: SKILL.md
.claude/skills/quoin-coverage/: SKILL.md
.claude/skills/quoin-db-migration/: SKILL.md
.claude/skills/quoin-deps-upgrade/: SKILL.md
.claude/skills/quoin-docs-audit/: SKILL.md
.claude/skills/quoin-hotfix/: SKILL.md
.claude/skills/quoin-new-module/: SKILL.md
.claude/skills/quoin-observability/: SKILL.md
.claude/skills/quoin-pre-pr/: SKILL.md
.claude/skills/quoin-release/: SKILL.md
.claude/skills/quoin-write-tests/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  copier-update.yml  docs.yml
alembic/: env.py
alembic/versions/: 7dc9a90dcc5a_soft_delete_users_add_deleted_at_and_.py  9c4e3d2a1b7f_use_timezone_aware_user_timestamps.py  f023486abc0e_add_server_side_defaults_to_user_.py  f2f495892c21_add_case_insensitive_unique_index_on_.py
app/: main.py
app/core/: config.py  exception_handlers.py  exceptions.py  lifecycle.py  logging.py  metadata.py  middlewares.py  openapi.py  pagination.py  schemas.py  security.py  telemetry.py  versioning.py
app/db/: session.py
app/http/: __init__.py  client.py
app/modules/system/: routes.py
app/modules/user/: exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
app/templates/: index.html
docs/: docs.md  index.md
docs/api/: conventions.md  core.md  overview.md  user.md
docs/architecture/: decision-log.md  design-decisions.md  overview.md
docs/guides/: ai-setup.md  api-stability.md  authentication.md  configuration.md  creating-a-module.md  database-migrations.md  dependency-scanning.md  deployment.md  deprecating-endpoints.md  error-handling.md  getting-started.md  observability.md  outbound-http.md  pagination.md  quality-checks.md  release-workflow.md  security.md  soft-delete.md  testing.md  troubleshooting.md
docs/javascripts/: home.js
docs/project/: changelog.md  contributing.md  roadmap.md  security-policy.md
docs/stylesheets/: extra.css
scripts/: copier_setup.py.jinja  gen_token.py  migration_guard.py  scaffold_module.py  sync_docs.py  verify_template_update.py
tests/: conftest.py  test_db.py  test_main.py  test_migration_guard.py  test_scaffold_module.py
tests/core/: test_config.py  test_exception_handlers.py  test_exceptions.py  test_lifecycle.py  test_logging.py  test_middlewares.py  test_openapi.py  test_pagination.py  test_security.py  test_telemetry.py  test_versioning.py
tests/http/: test_client.py
tests/modules/system/: test_routes.py
tests/modules/user/: test_concurrency.py  test_exceptions.py  test_models.py  test_routes.py
