[project]
name = "quoin-api"
version = "0.7.0"
description = "The architectural cornerstone for high-performance, scalable Python services"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Balakumaran Manoharan", email = "bala@balakmran.dev" }
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]==0.138.0",
    "greenlet==3.5.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-httpx>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "psycopg[binary]==3.3.4",
    "purgatory>=3.0.1",
    "pydantic-settings>=2.14.2",
    "PyJWT[crypto]>=2.13.0",
    "sqlmodel==0.0.38",
    "stamina>=26.1.0",
    "structlog>=26.1.0",
]

[project.urls]
Repository = "https://github.com/balakmran/quoin-api"
Documentation = "https://balakmran.github.io/quoin-api/"

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "test" },
    { include-group = "tooling" },
]
docs = [
    "mkdocstrings-python>=2.0.5",
    "zensical==0.0.46",
]
test = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
tooling = [
    "prek==0.4.5",
    "ruff==0.15.18",
    "ty==0.0.51",
]

[tool.coverage.run]
source = ["app"]
branch = true
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF", "D", "N"]
ignore = ["D100", "D104"] # Ignore missing docstring in public module/package
pydocstyle.convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Security",
    "fastapi.Header",
]

[tool.uv]
required-version = ">=0.11.19"
# exclude-newer = "7 days"
